--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
             <span class="text-underline">Watch</span>
         </div>
         <nav>
+            <div>
+
+            </div>
+            <div>
+                <ul>
+                    <li>Product</li>
+                    <li>Solution</li>
+                    <li>Showcase</li>
+                    <li>Resouces</li>
+                    <li>Enterprice</li>
+                    <li>Pricing</li>
+                </ul>
+            </div>
+            <div>
+                <button>Login</button>
+                <button>Request a demo</button>
+                <button>Get Started</button>
+            </div>
 
         </nav>
     </header>
