styling added in my nav

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
           <span>Build a dark style website and sharpen your skills in Nuxt, Tailwind, and GSAP</span>
             <span class="text-underline">Watch</span>
         </div>
-        <nav>
+        <nav class="flex justify-between align-center px-10 py-5 border-b">
             <div>
-
+                <img src="" alt="prismic-logo">
             </div>
             <div>
-                <ul>
+                <ul class="flex justify-center gap-4 ">
                     <li>Product</li>
                     <li>Solution</li>
                     <li>Showcase</li>
@@ -27,10 +27,10 @@
                     <li>Pricing</li>
                 </ul>
             </div>
-            <div>
+            <div class=" flex flex-row align-center gap-2">
                 <button>Login</button>
                 <button>Request a demo</button>
-                <button>Get Started</button>
+                <button class="border rounded-md p-2 text-white bg-black">Get Started</button>
             </div>
 
         </nav>
